updated Oxiod with lstm and tcn

--- a/Oxiod/source/Oxiod_resnet_main.ipynb
+++ b/Oxiod/source/Oxiod_resnet_main.ipynb
@@ -24,10 +24,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dd778b87-f5d7-44b7-920a-50d6f11f4108",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking in indexes: http://192.168.16.2:8080/root/pypi/+simple/, https://pypi.ngc.nvidia.com\n",
+      "Requirement already satisfied: tensorboardX in /usr/local/lib/python3.8/dist-packages (2.6.1)\n",
+      "Requirement already satisfied: protobuf>=4.22.3 in /usr/local/lib/python3.8/dist-packages (from tensorboardX) (4.23.3)\n",
+      "Requirement already satisfied: packaging in /usr/local/lib/python3.8/dist-packages (from tensorboardX) (23.0)\n",
+      "Requirement already satisfied: numpy in /usr/local/lib/python3.8/dist-packages (from tensorboardX) (1.22.2)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/usr/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Looking in indexes: http://192.168.16.2:8080/root/pypi/+simple/, https://pypi.ngc.nvidia.com\n",
+      "Requirement already satisfied: numpy-quaternion in /usr/local/lib/python3.8/dist-packages (2022.4.3)\n",
+      "Requirement already satisfied: numpy>=1.13 in /usr/local/lib/python3.8/dist-packages (from numpy-quaternion) (1.22.2)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/usr/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
+      "Looking in indexes: http://192.168.16.2:8080/root/pypi/+simple/, https://pypi.ngc.nvidia.com\n",
+      "Requirement already satisfied: h5py in /usr/local/lib/python3.8/dist-packages (3.9.0)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /usr/local/lib/python3.8/dist-packages (from h5py) (1.22.2)\n",
+      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\n",
+      "\u001b[33mWARNING: You are using pip version 21.2.4; however, version 23.1.2 is available.\n",
+      "You should consider upgrading via the '/usr/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "#import dependencies\n",
     "! pip install tensorboardX\n",
@@ -37,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e389f0a2-0051-416c-983f-000c95536884",
    "metadata": {
     "tags": []
@@ -68,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4970514b-4134-456e-8bcd-ba85676559df",
    "metadata": {},
    "outputs": [],
@@ -77,11 +104,12 @@
     "args = argparse.Namespace()\n",
     "\n",
     "#Paths to different files\n",
+    "args.type = 'resnet'\n",
     "args.root_dir = '/home/jovyan/localisation_datasets/Oxford Inertial Odometry Dataset/handheld'\n",
     "args.train_list = osp.join(args.root_dir, 'Train.txt')\n",
     "args.val_list = osp.join(args.root_dir, 'Validation.txt')\n",
     "args.test_list = osp.join(args.root_dir, 'Test.txt')\n",
-    "args.out_dir = osp.join(args.root_dir, 'outputs')\n",
+    "args.out_dir = osp.join(args.root_dir, args.type + '_outputs')\n",
     "args.model_path = osp.join(args.out_dir, 'checkpoints/checkpoint_latest.pt')\n",
     "\n",
     "\n",
@@ -119,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "255f8400-9ad7-4a34-afbf-a46f0877aef1",
    "metadata": {
     "tags": []
@@ -132,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9cbbd5ff-4115-4a68-b111-51bbda5aac0d",
    "metadata": {
     "tags": []
@@ -155,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cd160cd3-0d50-4f7d-a1cd-c3750fcf4e7b",
    "metadata": {
     "tags": []
@@ -173,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "39a6eae8-b9d1-4faa-b72d-e0bf8bdfdbcd",
    "metadata": {
     "tags": []
@@ -211,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b29b8c2a-028a-4ae8-a3bf-c52c8b6709d0",
    "metadata": {
     "tags": []
@@ -244,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e8323cc5-e083-4291-804e-ef4a3f9f15f0",
    "metadata": {
     "tags": []
@@ -259,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "18ecb3f1-6c6c-4c2b-83da-5a0fd8e2fbec",
    "metadata": {
     "tags": []
@@ -328,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fd833d0f-2463-4671-b2ef-e9118308c4df",
    "metadata": {},
    "outputs": [],
@@ -505,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "a37f5bf6-e08c-485f-9c36-9bd611514d3d",
    "metadata": {
     "tags": []
@@ -653,10 +681,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "ca3a94f5-cc7e-4f28-9dfc-8f5aba20590f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "handbag\n",
+      "step_size: 10, window_size: 200\n",
+      "Number of train samples: 27350\n",
+      "handheld\n",
+      "step_size: 10, window_size: 200\n",
+      "Number of train samples: 50184\n",
+      "pocket\n",
+      "step_size: 10, window_size: 200\n",
+      "Number of train samples: 32205\n",
+      "running\n",
+      "step_size: 10, window_size: 200\n",
+      "Number of train samples: 24998\n",
+      "slow walking\n",
+      "step_size: 10, window_size: 200\n",
+      "Number of train samples: 30234\n",
+      "trolley\n",
+      "step_size: 10, window_size: 200\n",
+      "Number of train samples: 33308\n",
+      "large scale\n",
+      "step_size: 10, window_size: 200\n",
+      "Number of train samples: 30082\n"
+     ]
+    }
+   ],
    "source": [
     "data_path_list = ['handbag', 'handheld', 'pocket', 'running', 'slow walking', 'trolley', 'large scale']\n",
     "for data in data_path_list:\n",
@@ -692,10 +748,10 @@
     "fig.tight_layout()\n",
     "for data in data_path_list:\n",
     "    args.root_dir = osp.join('/home/jovyan/localisation_datasets/Oxford Inertial Odometry Dataset', data)\n",
-    "    args.train_list = osp.join(args.root_dir, 'Train.txt')\n",
+    "    args.train_list = osp.join(args.root_dir, 'Train-small.txt')\n",
     "    args.val_list = osp.join(args.root_dir, 'Validation.txt')\n",
     "    args.model_path = osp.join(args.out_dir, 'checkpoints/checkpoint_latest.pt')\n",
-    "    args.out_dir = osp.join(args.root_dir, 'outputs')\n",
+    "    args.out_dir = osp.join(args.root_dir, args.type + '_outputs')\n",
     "    train_losses, val_losses = train(args)\n",
     "    plt.subplot(math.ceil(len(data_path_list) / 2), 2 , i)\n",
     "    plt.plot(train_losses)\n",
@@ -716,7 +772,7 @@
    "source": [
     "args.feature_sigma = 2\n",
     "args.target_sigma = -1\n",
-    "args.saveAnim = True\n",
+    "args.saveAnim = False\n",
     "data_path_list = ['handbag', 'handheld', 'pocket', 'running', 'slow walking', 'trolley', 'large scale']\n",
     "for data in data_path_list:\n",
     "    print(f'=============================================================================outputs for {data} ==============================================================')\n",
