added the paths

--- a/Oxiod/source/Oxiod_tcn.ipynb
+++ b/Oxiod/source/Oxiod_tcn.ipynb
@@ -92,8 +92,9 @@
     "args = argparse.Namespace()\n",
     "\n",
     "#Paths to different files\n",
+    "dataset_folder = osp.join(Path(os.getcwd()).parents[2], 'localisation_datasets')\n",
     "args.type = 'tcn' #choices=['tcn', 'lstm', 'lstm_bi']\n",
-    "args.root_dir = '/home/jovyan/localisation_datasets/Oxford Inertial Odometry Dataset/handheld'\n",
+    "args.root_dir = osp.join(dataset_folder, 'Oxford Inertial Odometry Dataset/handheld')\n",
     "args.train_list = osp.join(args.root_dir, 'Train-small.txt')\n",
     "args.val_list = osp.join(args.root_dir, 'Validation.txt')\n",
     "args.test_list = osp.join(args.root_dir, 'Test.txt')\n",
