--- a/Oxiod/source/Ox_DataViewer.ipynb
+++ b/Oxiod/source/Ox_DataViewer.ipynb
@@ -160,26 +160,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c3d43da-2f20-49d8-985d-722683801404",
-   "metadata": {},
-   "source": [
-    "## Missing Data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "91838bd5-bd5b-40ac-a5ae-667f5a63a374",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# show that there is missing data leading to poor velocity ground truth in some cases for large scale"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "f86c1b44-47d1-4541-aeec-a414295416ba",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
