--- a/Oxiod/source/Ox_DataViewer.ipynb
+++ b/Oxiod/source/Ox_DataViewer.ipynb
@@ -458,6 +458,7 @@
    "cell_type": "markdown",
    "id": "f86c1b44-47d1-4541-aeec-a414295416ba",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
